BUG: Removed legacy green background colour from behind download button gradient - appeared sometimes during page load.
git-svn-id: http://svn.montala.net/svn/resourcespace@5037 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/Col-black.css
+++ b/css/Col-black.css
@@ -82,7 +82,7 @@ input[readonly] {color: #FFFFFF;}
 .RecordPanel .Title {	border-bottom: 1px solid #AAA;}
 .RecordPanel .RecordDownload {border: 1px solid #AAAAAA;background: #595959 url(../gfx/black/interface/Download.gif) repeat-x;}
 .RecordPanel .RecordDownload .DownloadDBlend td {border: 1px solid #888;	color: #FFF;}
-.RecordPanel .RecordDownloadSpace .DownloadDBlend .DownloadButton {background: #7DA56E url(../gfx/black/interface/DownloadButton.gif?nc=1) repeat-x;}
+.RecordPanel .RecordDownloadSpace .DownloadDBlend .DownloadButton {background: #000 url(../gfx/black/interface/DownloadButton.gif?nc=1) repeat-x;}
 .RecordPanel .RecordDownloadSpace .DownloadDBlend p {color: #888888;text-align: left;}
 .RecordPanel .RecordDownloadSpace .DownloadDBlend a {color: #FFFFFF;text-align: left;}
 .RecordPanel .RecordDownloadSpace .DownloadDBlend {background: #383838 url(../gfx/black/interface/DownloadCell.gif) repeat-x;}
